- Prevent browsers from enforcing dark mode - Better marker cluster size handling - All menus now follows accent color - Small visual tweaks

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --accent-color: #0c466d;
     --accent-color-light: color-mix(in srgb, var(--accent-color) 40%, white 60%);
     --speed: 0.1s;
@@ -8,6 +8,7 @@ body,
 html {
     margin: 0;
     height: 100%;
+    color-scheme: light dark;
 }
 
 a {
@@ -29,7 +30,6 @@ a {
     align-content: center;
     overflow: hidden;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.55);
-    
 }
 
 .photo-marker img {
@@ -54,25 +54,23 @@ a {
     color: #333;
     text-align: center;
     overflow: auto;
-    /* scroll if content too tall */
 }
 
 .popup-content {
     pointer-events: none;
 }
 
-.popup-image img, .popup-image video{
+.popup-image img,
+.popup-image video {
     width: 100%;
     height: auto;
     /* maintain aspect ratio */
     object-fit: contain;
-    /* contain inside popup */
     border-radius: 6px;
     margin-top: 5px;
     margin-bottom: 10px;
     display: block;
 }
-
 
 .popup-text {
     font-size: 14px;
@@ -90,6 +88,7 @@ a {
     font-size: 10px;
     color: #909090;
 }
+
 .city-name {
     text-align: left;
     font-size: 16px;
@@ -104,58 +103,35 @@ a {
     background: transparent;
 }
 
-/* inner circular badge */
-.custom-cluster .cluster-inner {
+.custom-cluster {
+    width: var(--cluster-size);
+    height: var(--cluster-size);
+    font-size: calc(var(--cluster-size) * .6);
+
     display: flex;
     align-items: center;
     justify-content: center;
+
     border-radius: 50%;
-    background: var(--accent-color-light);
     border: 3px solid var(--accent-color);
+
+    background: var(--accent-color-light);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.75);
-    transition: var(--speed);
-}
 
-/* Cluster text */
-.custom-cluster .cluster-count {
-    color: var(--accent-color);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: 800;
-    text-shadow: 0 0 10px rgba(32, 32, 32, 0.318);    
-    display: inline-block;
+
+    color: var(--accent-color);
+    text-shadow: 0 0 10px rgba(32, 32, 32, 0.318);
+
+    transition: var(--speed);
+    cursor: pointer;
 }
 
-.custom-cluster.small .cluster-inner {
-    width: 34px;
-    height: 34px;
-    font-size: 20px;
-}
-
-.custom-cluster.medium .cluster-inner {
-    width: 44px;
-    height: 44px;
-    font-size: 25px;
-}
-
-.custom-cluster.large .cluster-inner {
-    width: 54px;
-    height: 54px;
-    font-size: 30px;
-}
-
-
-/* hover animation */
-.custom-cluster:hover .cluster-inner {
-    transform: scale(1.06);
-    transition: transform 0.2s ease-in-out;
-}
-
-
-.control-button
-{
+.control-button {
     width: 35px;
     height: 35px;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -163,48 +139,51 @@ a {
     background: var(--accent-color-light);
     border: 3px solid var(--accent-color) !important;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.75);
-    
+
     color: var(--accent-color);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
     font-size: 20px;
     cursor: pointer;
-    
+
     transition: var(--speed);
-    
-    /* Prevents text selection because it is annoying*/
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    
     overflow: hidden;
 }
 
-.control-button:hover {
+.control-button:hover,
+.custom-cluster:hover {
     transform: scale(1.05);
+    transition: transform 0.2s ease-in-out;
 }
 
-.control-button svg{
+.control-button svg {
     width: 65%;
     height: 65%;
 }
 
-.layer-switcher-panel{
+.layer-switcher-panel {
     visibility: hidden;
+    overflow: hidden;
     position: absolute;
     right: 45px;
     top: 0;
-    background: white;
-    border-radius: 8px;
-    overflow: hidden;
     min-width: 150px;
+    max-height: 0;
     font-size: 14px;
 
-    max-height: 0;
+    color: var(--accent-color);
+    background: var(--accent-color-light);
+
+    border-radius: 8px;
+    border: 3px solid var(--accent-color);
+
     opacity: 0;
     transition: visibility 0s, opacity 0.1s ease, max-height 0.1s ease;
+}
 
+
+.control-button,
+.layer-switcher-panel {
     /* Prevents text selection because it is annoying*/
     user-select: none;
     -webkit-user-select: none;
@@ -212,36 +191,42 @@ a {
     -ms-user-select: none;
 }
 
-.layer-switcher-panel.visible{
+.layer-switcher-panel.visible {
     visibility: visible;
     max-height: 300px;
     opacity: 1;
 }
 
-.layer-switcher-item{
+.layer-switcher-item {
     padding: 8px 12px;
     cursor: pointer;
     display: flex;
     align-items: center;
     gap: 8px;
     transition: var(--speed);
+    font-weight: 100;
 }
 
-.layer-switcher-item img{
+.layer-switcher-item img {
     height: 40px;
     border-radius: 5px;
 }
 
-.layer-switcher-item:hover{
+.layer-switcher-item:hover {
     background: color-mix(in srgb, var(--accent-color) 10%, rgba(255, 255, 255, 0.3) 90%);
     transform: scale(1.05);
 }
 
-.layer-switcher-item.selected img{
+.layer-switcher-item.selected {
     background: color-mix(in srgb, var(--accent-color) 10%, rgba(255, 255, 255, 0.3) 90%);
     transform: scale(1.05);
-    outline: 3px solid var(--accent-color);
-    outline-offset: 1.5px;   
+    font-weight: 700;
+}
+
+.layer-switcher-item.selected img {
+    background: color-mix(in srgb, var(--accent-color) 10%, rgba(255, 255, 255, 0.3) 90%);
+    transform: scale(1.05);
+    border: 3px solid var(--accent-color) !important;
 }
 
 .modal {
@@ -252,9 +237,12 @@ a {
     top: 0;
     width: 100%;
     height: 100%;
-    background: color-mix(in srgb, var(--accent-color) 50%, rgba(0, 0, 0, 0.5) 50%);
     align-items: center;
     justify-content: center;
+
+    backdrop-filter: blur(2px);
+    background: color-mix(in srgb, var(--accent-color) 50%, rgba(0, 0, 0, 0.5) 50%);
+    color: black;
 }
 
 .modal.show {
@@ -262,11 +250,13 @@ a {
 }
 
 .modal-content {
-    background: white;
+    background: var(--accent-color-light);
+    border: 3px solid var(--accent-color);
+
     padding: 20px;
-    border-radius: 6px;
+    border-radius: 8px;
     max-width: 400px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 100px rgba(0, 0, 0, 0.4);
     font-family: sans-serif;
 }
 
@@ -275,4 +265,3 @@ a {
     font-size: 20px;
     cursor: pointer;
 }
-
